fix swag,request field
